--- a/ProductUI/src/app/components/product-form/product-form.component.html
+++ b/ProductUI/src/app/components/product-form/product-form.component.html
@@ -1,5 +1,5 @@
 <div class="max-w-md mx-auto bg-white p-8 rounded-lg shadow-md">
-  <h2 class="text-2xl font-bold mb-6 text-center">Create Product</h2>
+  <h2 class="text-2xl font-bold mb-6 text-center">{{ actionLabel}}</h2>
   <form [formGroup]="productForm" (ngSubmit)="onSubmit()">
     <div class="mb-4">
       <label for="title" class="block text-sm font-medium text-gray-700"
@@ -62,28 +62,6 @@
         Price must be a positive number.
       </div>
     </div>
-
-    <div class="mb-4">
-      <label for="stock" class="block text-sm font-medium text-gray-700"
-        >Stock</label
-      >
-      <input
-        type="number"
-        id="stock"
-        formControlName="stock"
-        class="mt-1 block w-full border border-gray-300 rounded-md shadow-sm focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm p-2"
-      />
-      <div
-        *ngIf="
-          productForm.controls['stock'].invalid &&
-          productForm.controls['stock'].touched
-        "
-        class="text-danger text-sm"
-      >
-        Stock must be greater than 0.
-      </div>
-    </div>
-
     <div class="mb-4">
       <label for="imageUrl" class="block text-sm font-medium text-gray-700"
         >Image URL</label
@@ -158,7 +136,7 @@
       [disabled]="productForm.invalid"
       class="w-full text-bg-indigo-600 text-bg-dark text-white font-bold py-2 px-4 rounded ocus:outline-none focus:ring-2 focus:ring-indigo-500"
     >
-      Create Product
+      {{ actionLabel }}
     </button>
   </form>
 </div>
