--- a/ProductUI/src/app/components/products/products.component.html
+++ b/ProductUI/src/app/components/products/products.component.html
@@ -2,7 +2,7 @@
   <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-4">
     <ng-container *ngFor="let product of products; trackBy: trackByProductId">
       <div class="bg-white p-6 rounded-lg shadow-md">
-        <app-product-card [product]="product" [isAdmin]="true"></app-product-card>
+        <app-product-card [product]="product" [isAdmin]="true" (removeProduct)="removeProduct($event)"></app-product-card>
       </div>
     </ng-container>
   </div>
