--- a/ProductUI/src/app/components/product-card/product-card.component.html
+++ b/ProductUI/src/app/components/product-card/product-card.component.html
@@ -19,11 +19,12 @@
 
   <div class="mt-4">
     <span class="text-gray-500 text-sm">{{ product.category }}</span>
-    <h2 class="text-lg font-semibold mt-1" (click)="openOverlay(product)" (click)="openProductDetails(product)">{{ product.title }}</h2>
+    <h2 class="text-lg font-semibold mt-1" (click)="openOverlay(product)"
+        (click)="openProductDetails(product)">{{ product.title }}</h2>
     <div class="flex items-center mt-2">
       <span class="text-2xl font-bold">{{
-        product.price | currency : "USD"
-      }}</span>
+          product.price | currency : "USD"
+        }}</span>
     </div>
     <div class="flex items-center justify-between mt-4">
       <button
@@ -61,12 +62,12 @@
 </div>
 
 <!-- Include the Product Overlay Component -->
-<app-product-details 
-  [product]="selectedProduct" 
+<app-product-details
+  [product]="selectedProduct"
   (close)="closeOverlay()"
   *ngIf="selectedProduct">
 </app-product-details>
-<app-product-details 
+<app-product-details
   [isOpen]="showOverlay"
   [product]="selectedProduct"
   (click)="showOverlay = false">
