--- a/ProductUI/src/app/app.component.html
+++ b/ProductUI/src/app/app.component.html
@@ -1,8 +1,9 @@
+<app-notification></app-notification>
 <div>
   <app-header [isAdmin]="true"></app-header>
 </div>
 <div>
-  <router-outlet />
+  <router-outlet/>
 </div>
 <div>
   <app-footer></app-footer>
