--- a/ProductUI/src/app/components/cart/cart.component.html
+++ b/ProductUI/src/app/components/cart/cart.component.html
@@ -35,12 +35,10 @@
             <p class="text-gray-600 mb-4">
               Looks like you haven't added any products yet. Start shopping to fill it up!
             </p>
-            <a [routerLink]="['/shop']" class="bg-blue-600 text-white px-4 py-2 rounded">
-              Browse Products
-            </a>
+            <a [routerLink]="['/']" class="btn btn-primary">Browse Products</a>
           </div>
         }
-        <div class="mt-6 flex items-center space-x-2 text-gray-600">
+        <div *ngIf="cartProducts.length" class="mt-6 flex items-center space-x-2 text-gray-600">
           <i class="fas fa-truck"></i>
           <span>Free Delivery within 1-2 days</span>
         </div>
@@ -54,7 +52,6 @@
                    class="border rounded px-2 py-1 flex-1" [ngModelOptions]="{ standalone: true }"/>
             <button class="text-bg-primary text-gray-600 px-4 py-1 rounded" (click)="applyCoupon()">Apply</button>
           </div>
-          <div *ngIf="!isCouponValid" class="error-message text-danger mt-2">{{ couponErrorMessage }}</div>
         </div>
 
         <div class="bg-white p-6 rounded shadow-sm w-1/3">
@@ -63,7 +60,7 @@
               <span>Total price:</span>
               <span>{{ (totalAmount - taxs + discount) | currency }}</span>
             </div>
-            <div *ngIf="couponCode.length >0 && isCouponValid && cartProducts.length != 0" class="flex justify-between">
+            <div *ngIf="couponCode.length >0 && cartProducts.length != 0" class="flex justify-between">
               <span>Discount:</span>
               <span class="text-green-600">-{{ discount | currency }}</span>
             </div>
@@ -83,10 +80,6 @@
             </button>
             <a [routerLink]="['']" class="text-bg-secondary text-gray-600 w-full py-2 rounded text-center">Back to
               shop</a>
-
-            <p *ngIf="orderFail" class="error-message text-danger mt-2">
-              {{ orderErrorMessage }}
-            </p>
           </div>
         </div>
       </div>
