--- a/ProductUI/src/app/components/product-card/product-card.component.html
+++ b/ProductUI/src/app/components/product-card/product-card.component.html
@@ -54,8 +54,8 @@
 
       <!-- Rating -->
       <div class="flex items-center">
-        <span class="text-gray-700 text-sm mr-1">{{ 5.0 }}</span>
-        <i class="fas fa-star text-yellow-500"></i>
+        <span class="text-gray-500 text-sm mr-1">{{ rating }}</span>
+        <i class="fa fa-star text-yellow-500"></i>
       </div>
     </div>
   </div>
