--- a/ProductUI/src/app/components/footer/footer.component.html
+++ b/ProductUI/src/app/components/footer/footer.component.html
@@ -2,32 +2,32 @@
   <div class="text-center w-full max-w-6xl mx-auto px-4">
     <div class="mt-4 rounded-lg p-4">
       <div class="flex flex-wrap justify-center space-x-4 md:space-x-8 mb-2">
-        <a href="#" class="text-gray-500 hover:text-gray-700">About</a>
-        <a href="#" class="text-gray-500 hover:text-gray-700">Blog</a>
-        <a href="#" class="text-gray-500 hover:text-gray-700">Jobs</a>
-        <a href="#" class="text-gray-500 hover:text-gray-700">Press</a>
-        <a href="#" class="text-gray-500 hover:text-gray-700">Accessibility</a>
-        <a href="#" class="text-gray-500 hover:text-gray-700">Partners</a>
+        <a href="https://www.linkedin.com/in/amirelkased" class="text-gray-500 hover:text-gray-700" target="_blank">About</a>
+        <a href="https://www.linkedin.com/in/amirelkased" class="text-gray-500 hover:text-gray-700" target="_blank">Blog</a>
+        <a href="https://www.linkedin.com/in/amirelkased" class="text-gray-500 hover:text-gray-700" target="_blank">Jobs</a>
+        <a href="https://www.linkedin.com/in/amirelkased" class="text-gray-500 hover:text-gray-700" target="_blank">Press</a>
+        <a href="https://www.linkedin.com/in/amirelkased" class="text-gray-500 hover:text-gray-700" target="_blank">Accessibility</a>
+        <a href="https://www.linkedin.com/in/amirelkased" class="text-gray-500 hover:text-gray-700" target="_blank">Partners</a>
       </div>
       <div class="flex justify-center space-x-4 md:space-x-6 mb-2">
-        <a href="#" class="text-gray-500 hover:text-gray-700"
+        <a href="https://www.facebook.com/amirelkased" class="text-gray-500 hover:text-gray-700" target="_blank"
         ><i class="fab fa-facebook"></i
         ></a>
-        <a href="#" class="text-gray-500 hover:text-gray-700"
+        <a href="https://www.instagram.com/amirelkased" class="text-gray-500 hover:text-gray-700" target="_blank"
         ><i class="fab fa-instagram"></i
         ></a>
-        <a href="#" class="text-gray-500 hover:text-gray-700"
+        <a href="https://www.twitter.com/amirelkased1" class="text-gray-500 hover:text-gray-700" target="_blank"
         ><i class="fas fa-times"></i
         ></a>
-        <a href="#" class="text-gray-500 hover:text-gray-700"
+        <a href="https://www.github.com/amirelkased" class="text-gray-500 hover:text-gray-700" target="_blank"
         ><i class="fab fa-github"></i
         ></a>
-        <a href="#" class="text-gray-500 hover:text-gray-700"
+        <a href="https://www.youtube.com/amirelkased" class="text-gray-500 hover:text-gray-700" target="_blank"
         ><i class="fab fa-youtube"></i
         ></a>
       </div>
       <p class="text-gray-500 text-sm">
-        © 2020 Fawry, Inc. All rights reserved.
+        © 2008 Fawry, Inc. All rights reserved.
       </p>
     </div>
   </div>
