--- a/ProductUI/src/app/components/header/header.component.html
+++ b/ProductUI/src/app/components/header/header.component.html
@@ -36,7 +36,10 @@
     <div class="order-lg-last col-lg-5 col-sm-8 col-8">
       <div class="float-end">
         <a data-bs-toggle="offcanvas" [routerLink]="['orders/cart']" class="btn btn-light" style="margin-right: 10px;">
-          <i class="fa fa-shopping-cart"></i> <span class="ms-1">My cart </span>
+          <i  class="fa fa-shopping-cart position-relative">
+            <span *ngIf="cartItemCount" class="cart-count">{{ cartItemCount }}</span>
+          </i>
+          <span class="ms-1">My cart</span>
         </a>
         <a href="#" class="btn btn-light">
           <i class="fa fa-user"></i> <span class="ms-1 d-none d-sm-inline-block">Sign in  </span>
