--- a/ProductUI/src/app/components/order-details/order-details.component.html
+++ b/ProductUI/src/app/components/order-details/order-details.component.html
@@ -16,7 +16,8 @@
       </p>
     </div>
     <div>
-      <p class="text-gray-600"><span class="font-semibold text-gray-800">Total Amount:</span> ${{ order?.totalAmount }}
+      <p class="text-gray-600"><span class="font-semibold text-gray-800">Total Paid Amount:</span>
+        ${{ order!.totalAmount - order!.discountAmount }}
       </p>
       <p class="text-gray-600"><span class="font-semibold text-gray-800">Customer ID:</span> {{ order?.customerId }}</p>
       <p class="text-gray-600">
