--- a/ProductUI/src/app/components/orders/orders.component.html
+++ b/ProductUI/src/app/components/orders/orders.component.html
@@ -36,7 +36,7 @@
         <tr>
           <th>Order ID</th>
           <th>Customer ID</th>
-          <th>Total Amount</th>
+          <th>Total Paid Amount</th>
           <th>Discount Amount</th>
           <th>Status</th>
           <th>Items</th>
@@ -47,7 +47,7 @@
         <tr *ngFor="let order of orders" class="text-center">
           <td>{{ order.id }}</td>
           <td>{{ order.customerId }}</td>
-          <td>{{ order.totalAmount | currency }}</td>
+          <td>{{ order.totalAmount - order.discountAmount  | currency }}</td>
           <td>{{ order.discountAmount | currency }}</td>
           <td>{{ order.orderStatus }}</td>
           <td>
