update dummy loader

--- a/ProductUI/src/app/components/header/header.component.html
+++ b/ProductUI/src/app/components/header/header.component.html
@@ -1,4 +1,4 @@
-<nav class="bg-dark text-light p-4 shadow-md">
+<nav class="bg-dark text-light p-4 shadow-md fixed top-0 w-full z-50">
   <div class="container mx-auto flex justify-between items-center">
     <!-- Logo and navigation -->
     <div class="flex items-center space-x-6">
