--- a/ProductUI/src/app/components/order-details/order-details.component.html
+++ b/ProductUI/src/app/components/order-details/order-details.component.html
@@ -17,7 +17,7 @@
     </div>
     <div>
       <p class="text-gray-600"><span class="font-semibold text-gray-800">Total Paid Amount:</span>
-        ${{ order!.totalAmount - order!.discountAmount }}
+        ${{ order!.totalAmount + 14 - order!.discountAmount }}
       </p>
       <p class="text-gray-600"><span class="font-semibold text-gray-800">Customer ID:</span> {{ order?.customerId }}</p>
       <p class="text-gray-600">
