--- a/ProductUI/src/app/components/products/products.component.html
+++ b/ProductUI/src/app/components/products/products.component.html
@@ -1,4 +1,4 @@
-<div class="bg-gray-100 p-10">
+<div class="bg-gray-100 p-10 mt-16">
   <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-4">
     <ng-container *ngFor="let product of products; trackBy: trackByProductId">
       <div class="bg-white p-6 rounded-lg shadow-md">
