--- a/ProductUI/src/app/app.component.html
+++ b/ProductUI/src/app/app.component.html
@@ -1,9 +1,11 @@
 <div>
   <app-header [isAdmin]="true"></app-header>
 </div>
-<div>
-  <router-outlet/>
-</div>
+<section class="mt-20">
+  <div>
+    <router-outlet/>
+  </div>
+</section>
 <div>
   <app-footer></app-footer>
 </div>
